crates/swc/tests/stacktrace/issue-9742/output/stacks.txt
$DIR/tests/stacktrace/issue-9742/input/index.js:3
        throw new Error('foo')
        ^


Error: foo
    at new constructor ($DIR/tests/stacktrace/issue-9742/input/index.js:3:15)
    at new Parent ($DIR/tests/stacktrace/issue-9742/input/index.js:7:1)
    at Object.<anonymous> ($DIR/tests/stacktrace/issue-9742/input/index.js:11:1)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
